--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@sendgrid/mail": "^7.6.0",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.28.0",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
