.env file updated

--- a/example.env
+++ b/example.env
@@ -7,3 +7,7 @@ EMAIL=
 SENDGRID_API_KEY=
 TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
+SERVICE_ID=
+CLOUDINARY_CLOUD_NAME:
+CLOUDINARY_API_KEY:
+CLOUDINARY_API_SECRET:
