--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node backend/server",
     "server": "nodemon backend/server",
     "client": "npm start --prefix frontend",
-    "dev": "./node_modules/.bin/concurrently \"npm run server\" \"npm run client\""
+    "dev": "./node_modules/.bin/concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
   "author": "be-developer-team",
   "license": "ISC",
