--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-password-checklist": "^1.3.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
