--- a/example.env
+++ b/example.env
@@ -1,13 +1,19 @@
-NODE_ENV=development
+NODE_ENV=production
 PORT=5000
 MONGO_URI=
 JWT_SECRET=
-JWT_COOKIE_EXPIRES_IN=30
+JWT_COOKIE_EXPIRES_IN=
 EMAIL=
 SENDGRID_API_KEY=
 TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
 SERVICE_ID=
-CLOUDINARY_CLOUD_NAME:
-CLOUDINARY_API_KEY:
-CLOUDINARY_API_SECRET:
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+SMTP_HOST=
+SMTP_NAME=
+SMTP_EMAIL=
+SMTP_PASSWORD=
+SMTP_PORT_TLS=
+SMTP_PORT_SSL=
