--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,11 +7,15 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@metamask/providers": "^9.0.0",
+    "@openzeppelin/contracts": "^4.5.0",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "ethereumjs-util": "^7.1.5",
+    "ethers": "^5.6.9",
     "firebase": "^9.6.1",
     "js-cookie": "^3.0.1",
     "react": "^17.0.2",
@@ -52,5 +56,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@truffle/hdwallet-provider": "^2.0.10",
+    "ethereum-abi-types-generator": "^1.3.2"
   }
 }
