smart contract added & nft minting working

--- a/example.env
+++ b/example.env
@@ -17,3 +17,7 @@ SMTP_EMAIL=
 SMTP_PASSWORD=
 SMTP_PORT_TLS=
 SMTP_PORT_SSL=
+PINATA_API_KEY=
+PINATA_SECRET_API_KEY=
+NEXT_PUBLIC_PINATA_DOMAIN=
+NEXT_PUBLIC_NETWORK_ID=
