--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,18 @@
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@metamask/providers": "^9.0.0",
     "@openzeppelin/contracts": "^4.5.0",
+    "@pinata/sdk": "^1.1.26",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.1",
     "ethereumjs-util": "^7.1.5",
     "ethers": "^5.6.9",
     "firebase": "^9.6.1",
+    "form-data": "^4.0.0",
+    "fs": "^0.0.1-security",
     "js-cookie": "^3.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
@@ -26,7 +30,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
-    "react-toastify": "^8.1.0",
+    "react-toastify": "^8.2.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.0",
