--- a/frontend/.env.development.local.example
+++ b/frontend/.env.development.local.example
@@ -2,3 +2,4 @@ REACT_APP_PINATA_API_KEY=
 REACT_APP_PINATA_SECRET_API_KEY=
 REACT_APP_PINATA_DOMAIN=
 REACT_APP_NETWORK_ID=
+REACT_APP_CONTRACT_ADDRESS=
