--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.0",
+    "swr": "^1.3.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
