--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@metamask/jazzicon": "^2.0.0",
     "@metamask/providers": "^9.0.0",
     "@openzeppelin/contracts": "^4.5.0",
     "@pinata/sdk": "^1.1.26",
@@ -25,6 +26,7 @@
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-jazzicon": "^1.0.4",
     "react-password-checklist": "^1.3.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
