rpc provider updated & bug fixed

--- a/frontend/.env.development.local.example
+++ b/frontend/.env.development.local.example
@@ -1,6 +1,7 @@
 REACT_APP_PINATA_API_KEY=
 REACT_APP_PINATA_SECRET_API_KEY=
-REACT_APP_PINATA_DOMAIN=
-REACT_APP_NETWORK_ID=
-REACT_APP_CONTRACT_ADDRESS=
-REACT_APP_PROVIDER=
+REACT_APP_PINATA_DOMAIN=https://gateway.pinata.cloud
+# ropsten given:
+REACT_APP_PROVIDER=https://ropsten.infura.io/v3/Your_API_Key
+REACT_APP_NETWORK_ID=3
+REACT_APP_CONTRACT_ADDRESS="0xC8d2598C3ff72e3f1E06907f4A73732dc8d6f6A0"
