bug fixes & working locally

--- a/truffle/example.env
+++ b/truffle/example.env
@@ -1,2 +1,3 @@
 INFURA_API_KEY ="https://ropsten.infura.io/v3/<Your-API-Key>"
 MNEMONIC ="<Your-MetaMask-Secret-Recovery-Phrase>"
+ETHERSCAN_API_KEY='your-ethereum-api-key'
