--- a/example.env
+++ b/example.env
@@ -1,6 +1,6 @@
 NODE_ENV=production
 PORT=5000
-MONGO_URI=
+MONGO_URI=mongodb://localhost:27017/indicium
 JWT_SECRET=
 JWT_COOKIE_EXPIRES_IN=
 EMAIL=
