--- a/frontend/.env.development.local.example
+++ b/frontend/.env.development.local.example
@@ -2,6 +2,9 @@ REACT_APP_PINATA_API_KEY=
 REACT_APP_PINATA_SECRET_API_KEY=
 REACT_APP_PINATA_DOMAIN=https://gateway.pinata.cloud
 # ropsten given:
-REACT_APP_PROVIDER=https://ropsten.infura.io/v3/Your_API_Key
-REACT_APP_NETWORK_ID=3
-REACT_APP_CONTRACT_ADDRESS="0xC8d2598C3ff72e3f1E06907f4A73732dc8d6f6A0"
+REACT_APP_PROVIDER=http://127.0.0.1:7545
+# REACT_APP_PROVIDER=https://ropsten.infura.io/v3/Your_API_Key
+REACT_APP_NETWORK_ID=1337
+# REACT_APP_NETWORK_ID=3
+REACT_APP_CONTRACT_ADDRESS=0x42d16390e7d827bBaC3aF994d3A063029E6B6E16
+# REACT_APP_CONTRACT_ADDRESS="0xC8d2598C3ff72e3f1E06907f4A73732dc8d6f6A0" // ropsten
